--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,5 +1,5 @@
 .my-hover:hover {
-  cursor: pointer; 
+  cursor: pointer;
 }
 .create-account {
   border: none;
@@ -85,7 +85,7 @@ width: 100%;
 .my-side-nav {
   position: fixed;
   height: 100vh;
-  width: 200px;
+  /*background-color: red;*/
 }
 
 .divider-section {
@@ -93,10 +93,9 @@ width: 100%;
 }
 
 .results {
-  width: 75%;
-  margin: 0px 200px;
-  display: flex;
+  width: 85%;
+  /*background-color: blue;*/
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 
 }
