--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -8,8 +8,8 @@
 
 
     <ul id="nav-mobile" class="right">
-      <li><a href="/auth">Sign In</a></li>
-      <li><a ng-show="currentUser" class="dropdown-button" href="#!" data-activates="dropdown1" dropdown data-beloworigin="true">{{currentUser.un}}<i class="material-icons right">arrow_drop_down</i></a></li>
+      <li><a href="/auth" ng-hide="currentUser">Sign In</a></li>
+      <li><a ng-show="currentUser" class="dropdown-button" href="#!" data-activates="dropdown1" dropdown data-beloworigin="true">{{currentUser.first_name}}<i class="material-icons right">arrow_drop_down</i></a></li>
     </ul>
   </div>
 </nav>
@@ -17,10 +17,9 @@
 <!-- DROPDOWN -->
 
 <ul id="dropdown1" class="dropdown-content">
-  <li><a href="#!">My Books</a></li>
-  <li><a href="#!">Wishlist</a></li>
+  <li><a href="#!">Profile</a></li>
   <li class="divider"></li>
-  <li><a href="#!" ng-click='logout()'>Log Out</a></li>
+  <li><a href="/auth/logout">Log Out</a></li>
 </ul>
 
 
