--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,18 +1,71 @@
+.center-center {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 .my-hover:hover {
   cursor: pointer;
 }
-.create-account {
-  border: none;
-  border-bottom: 1px;
+
+.page-wrapper {
+  padding-top: 65px;
+
 }
 
-.sign-in {
-  background-color: white;
+.my-side-nav {
+  position: fixed;
+  height: 100vh;
+  display: block;
+}
+
+.nav-links {
+  margin: -3% 0% 10% 15%;
+}
+
+.nav-link {
+  margin:2% 0%;
+}
+
+.nav-link:hover {
+  cursor: pointer;
+  border-bottom: 1px;
+  border-bottom-style: solid;
 }
 
 .my-nav {
   position: fixed;
   z-index: 100;
+}
+
+.books-nav {
+  margin-top: 56px;;
+}
+
+.user-icon{
+  height: 35px;
+  margin-top: 15px;
+}
+
+.search-sort {
+  width: 76%;
+  left: 21%;
+  position: fixed;
+  z-index: 50;
+  background-color: white;
+}
+
+.results {
+  padding-top: 100px;
+  padding-left: 25px;
+}
+
+.my-fab{
+  right: 0;
+  bottom: 17%;
 }
 
 .bg-video {
@@ -30,19 +83,6 @@ width: 100%;
 .hero-title {
   color: white;
   font-size: 24px;
-}
-
-.center-center {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.page-wrapper {
-  padding-top: 60px;
 }
 
 .search-banner {
@@ -63,17 +103,17 @@ width: 100%;
 .book-img {
   background-size: contain;
 }
+
 .my-card {
   font-size: 16px !important;
   /*margin: 15px;*/
 }
+
 .search {
   height: 60vh;
   background-image: url("../imgs/lib1.jpg");
   margin-bottom: 25px;
 }
-
-
 
 .my-parallax {
     background-attachment: fixed;
@@ -82,20 +122,12 @@ width: 100%;
     background-size: cover;
 }
 
-.my-side-nav {
-  position: fixed;
-  height: 100vh;
-  /*background-color: red;*/
-}
-
 .divider-section {
   height: 350px;
 }
 
-.results {
-  width: 85%;
-  /*background-color: blue;*/
-  flex-wrap: wrap;
-  justify-content: center;
 
+.book-img {
+  height: 300px;
+  width: 200px;
 }
