--- a/public/views/books.html
+++ b/public/views/books.html
@@ -1,7 +1,11 @@
-<h1>Book Details</h1>
-<div class="book-wrapper">
-  <img class="book-img" ng-src='{{book[0].imgurl}}'></img>
-  <h4>{{book[0].title}}</h4>
-  {{book[0].author}}
-  {{book[0].isbn}}
+<div class="page-wrapper container">
+  <h3>{{book[0].title}}</h3>
+  <div class="book-wrapper">
+
+    <img class="book-img" ng-src='{{book[0].imgurl}}'></img>
+
+    {{book[0].author}}
+    {{book[0].isbn}}
+    
+  </div>
 </div>
