--- a/public/styles/materialize.css
+++ b/public/styles/materialize.css
@@ -2604,7 +2604,7 @@ ul:not(.browser-default) li {
 }
 
 .hoverable:hover {
-  transition: box-shadow .25s;
+  transition: ease-in-out box-shadow .25s;
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -4689,7 +4689,7 @@ small {
 }
 
 .card .card-title {
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 300;
 }
 
@@ -5048,9 +5048,9 @@ small {
     display: flex;
   }
   .tabs .tab {
-    -webkit-flex-grow: 1;
-    -ms-flex-positive: 1;
-    flex-grow: 1;
+    -webkit-flex-grow: .5;
+    -ms-flex-positive: .5;
+    flex-grow: .5;
   }
   .tabs .tab a {
     padding: 0 12px;
@@ -5240,12 +5240,12 @@ button.btn-floating {
 }
 
 .fixed-action-btn {
-  position: fixed;
-  right: 23px;
-  bottom: 23px;
-  padding-top: 15px;
-  margin-bottom: 0;
-  z-index: 998;
+  position: absolute;
+right: 23px;
+bottom: 2%;
+padding-top: 15px;
+margin-bottom: 0;
+z-index: 998;
 }
 
 .fixed-action-btn.active ul {
@@ -5318,11 +5318,11 @@ button.btn-floating {
 }
 
 .fixed-action-btn ul {
-  left: 0;
-  right: 0;
+  left: 0px;
+  right: 0px;
   text-align: center;
   position: absolute;
-  bottom: 64px;
+  bottom: 37px;
   margin: 0;
   visibility: hidden;
 }
