--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -9,7 +9,13 @@
 
     <ul id="nav-mobile" class="right">
       <li><a href="/auth" ng-hide="currentUser">Sign In</a></li>
-      <li><a ng-show="currentUser" class="dropdown-button" href="#!" data-activates="dropdown1" dropdown data-beloworigin="true">{{currentUser.first_name}}<i class="material-icons right">arrow_drop_down</i></a></li>
+      <li><img class="user-icon circle" ng-show="currentUser" ng-src="{{currentUser.imgurl}}""></li>
+      <li>
+        <a ng-show="currentUser" class="dropdown-button" href="#!" data-activates="dropdown1" dropdown data-beloworigin="true">
+          {{currentUser.first_name}}
+          <i class="material-icons right">arrow_drop_down</i>
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
@@ -17,67 +23,7 @@
 <!-- DROPDOWN -->
 
 <ul id="dropdown1" class="dropdown-content">
-  <li><a href="#!">Profile</a></li>
+  <li><a ui-sref="profile">Profile</a></li>
   <li class="divider"></li>
   <li><a href="/auth/logout">Log Out</a></li>
 </ul>
-
-
-<!-- MODAL -->
-<!-- <div id="modal1" class="modal sign-in">
-    <div class="modal-content">
-      <h4>Sign In</h4>
-      <form class="col s12" action="index.html" method="post">
-        <div class="row">
-          <div class="input-field col s12">
-            <input id="username" type="text" ng-model="user.un">
-            <label for="username">Username</label>
-          </div>
-          <div class="input-field col s12">
-            <input id="password" type="password" ng-model="user.pw">
-            <label for="password">Password</label>
-          </div>
-        </div>
-      </form>
-
-      <ul class="collapsible z-depth-0 create-account" data-collapsible="accordion" watch>
-        <li>
-          <div class="collapsible-header">Don't have an account?</div>
-          <div class="collapsible-body">
-            <form class="col s12" action="index.html" method="post">
-              <div class="row">
-                <div class="input-field col s6">
-                  <input  id="first_name" type="text" class="validate">
-                  <label for="first_name">First Name</label>
-                </div>
-                <div class="input-field col s6">
-                  <input id="last_name" type="text" class="validate">
-                  <label for="last_name">Last Name</label>
-                </div>
-              </div>
-              <div class="row">
-                <div class="input-field col s12">
-                  <input id="username" type="text">
-                  <label for="username">Username</label>
-                </div>
-                <div class="input-field col s12">
-                  <input id="password" type="password">
-                  <label for="password">Password</label>
-                </div>
-              </div>
-              <div class="row">
-                <div class="input-field col s12">
-                  <input id="email" type="email" class="validate">
-                  <label for="email">Email</label>
-                </div>
-              </div>
-            </form>
-            <a href="#!" class="modal-action modal-close waves-effect btn-flat" >Create Account</a>
-          </div>
-        </li>
-      </ul>
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close waves-effect btn" ng-click="login(user)">Sign In</a>
-    </div>
-  </div> -->
