--- a/public/styles/materialize.css
+++ b/public/styles/materialize.css
@@ -3042,11 +3042,12 @@ td, th {
 }
 
 .collection .collection-item.avatar .title {
-  font-size: 16px;
+  font-size: 20px;
+  color: black;
 }
 
 .collection .collection-item.avatar p {
-  margin: 0;
+  margin: 0 15px;
 }
 
 .collection .collection-item.avatar .secondary-content {
@@ -3094,7 +3095,7 @@ td, th {
 
 .secondary-content {
   float: right;
-  color: #26a69a;
+  color: #ffb74d;
 }
 
 .collapsible .collection {
@@ -4328,6 +4329,8 @@ nav ul a.btn > .material-icons, nav ul a.btn-large > .material-icons, nav ul a.b
 }
 
 nav ul a:hover {
+  color: #FFB74B;
+  transition: .25s;
   background-color: rgba(0, 0, 0, 0.1);
 }
 
@@ -4846,7 +4849,6 @@ small {
 
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating) {
   color: #ffab40;
-  margin-right: 24px;
   transition: color .3s ease;
   text-transform: uppercase;
 }
@@ -5427,7 +5429,7 @@ z-index: 998;
 
 .dropdown-content li > a, .dropdown-content li > span {
   font-size: 16px;
-  color: #26a69a;
+  color: #FFB74B;
   display: block;
   line-height: 22px;
   padding: 14px 16px;
@@ -5583,7 +5585,7 @@ z-index: 998;
   background-color: #fafafa;
   padding: 0;
   max-height: 70%;
-  width: 55%;
+  width: 80%;
   margin: auto;
   overflow-y: auto;
   border-radius: 2px;
@@ -6023,8 +6025,8 @@ input[type=tel]:focus:not([readonly]),
 input[type=number]:focus:not([readonly]),
 input[type=search]:focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #26a69a;
-  box-shadow: 0 1px 0 0 #26a69a;
+  border-bottom: 1px solid #FFB74B;
+  box-shadow: 0 1px 0 0 #FFB74B;
 }
 
 input:not([type]):focus:not([readonly]) + label,
@@ -6040,7 +6042,7 @@ input[type=tel]:focus:not([readonly]) + label,
 input[type=number]:focus:not([readonly]) + label,
 input[type=search]:focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: #26a69a;
+  color: #FFB74B;
 }
 
 input:not([type]).valid, input:not([type]):focus.valid,
@@ -6230,7 +6232,6 @@ textarea.materialize-textarea + label:after {
   color: #9e9e9e;
   position: absolute;
   top: 0.8rem;
-  left: 0;
   font-size: 1rem;
   cursor: text;
   transition: .2s ease-out;
@@ -6251,7 +6252,7 @@ textarea.materialize-textarea + label:after {
 }
 
 .input-field .prefix.active {
-  color: #26a69a;
+  color: #FFB74B;
 }
 
 .input-field .prefix ~ input,
@@ -6431,12 +6432,12 @@ textarea.materialize-textarea {
 [type="radio"]:checked + label:after,
 [type="radio"].with-gap:checked + label:before,
 [type="radio"].with-gap:checked + label:after {
-  border: 2px solid #26a69a;
+  border: 2px solid #FFB74B;
 }
 
 [type="radio"]:checked + label:after,
 [type="radio"].with-gap:checked + label:after {
-  background-color: #26a69a;
+  background-color: #FFB74B;
 }
 
 [type="radio"]:checked + label:after {
