--- a/public/views/books.html
+++ b/public/views/books.html
@@ -1,11 +1,89 @@
-<div class="page-wrapper container">
-  <h3>{{book[0].title}}</h3>
-  <div class="book-wrapper">
+<div class="row">
+  <div class="col s12" ng-hide='users'>
+    <div ng-show="userBooks[0]">
+      <ul class="collection with-header z-depth-2">
+      <li class='collection-header'><h5>My Books</h5></li>
+       <li class="collection-item avatar" ng-repeat='book in userBooks'>
+         <a><img ng-src="{{book.imgurl}}" class="book-icon"></a>
+         <span class="title"><a ui-sref='books( {id: {{book.isbn}} } )'><strong>{{book.title}}</strong></a></span>
+         <p>
+           <strong>ISBN: </strong> {{book.isbn}} </br>
+           <strong>Publisher: </strong>{{book.publisher}}
+        </p>
+         <!-- <a class="secondary-content"
+           tooltipped data-delay="50"
+           data-position="left"
+           data-tooltip="Find users with this book">
+           <i class="material-icons">supervisor_account
+           </i>
+         </a> -->
+         <a ng-click='removeFromUserBooks(book.uid)'
+           class="secondary-content my-hover" style="top:50px;"
+           tooltipped data-delay="50"
+           data-position="left"
+           data-tooltip="Remove from My Books"
+           message="Removed from My Books"
+           duration="2000"
+           toast='click' >
+           <i class="material-icons">delete
+           </i>
+         </a>
+       </li>
+     </ul>
+    </div>
 
-    <img class="book-img" ng-src='{{book[0].imgurl}}'></img>
+    <div ng-show='wishlist[0]'>
+      <ul class="collection with-header z-depth-2" id="wishlist">
+      <li class='collection-header'><h5>Wishlist</h5></li>
+       <li class="collection-item avatar" ng-repeat='book in wishlist'>
+         <a ui-sref='books( {id: {{book.isbn}} } )'><img ng-src="{{book.imgurl}}" class="book-icon"></a>
+         <span class="title"><a ui-sref='books( {id: {{book.isbn}} } )'><strong>{{book.title}}</strong></a></span>
+         <p>
+           <strong>ISBN: </strong> {{book.isbn}} </br>
+           <strong>Publisher: </strong>{{book.publisher}}
+        </p>
+         <a class="secondary-content my-hover"
+           tooltipped data-delay="50"
+           data-position="left"
+           data-tooltip="Find users with this book"
+           ng-click="findUsers(book.book_id)">
+           <i class="material-icons">supervisor_account
+           </i>
+         </a>
+         <a ng-click='removeFromWishlist(book.wid)'
+           class="secondary-content my-hover" style="top:50px;"
+           tooltipped data-delay="50"
+           data-position="left"
+           data-tooltip="Remove from Wishlist"
+           message="Removed from Wishlist"
+           duration="2000"
+           toast='click' >
+           <i class="material-icons">delete
+           </i>
+         </a>
+       </li>
+     </ul>
+    </div>
 
-    {{book[0].author}}
-    {{book[0].isbn}}
-    
+  </div>
+  <div class="col s12" ng-show='users[0]'>
+    <ul class="collection z-depth-2">
+      <li class="collection-item avatar">
+        <img ng-src="{{users[0].imgurl}}" class="book-icon">
+        <span class="title"><h5>{{users[0].title}}</h5></span>
+        <p><strong>ISBN: </strong>{{users[0].isbn}}</p>
+      </li>
+      <li class="collection-item avatar" ng-repeat="user in users">
+        <img ng-src="{{user.pic}}" alt="" class="circle">
+        <span class="title">{{user.first_name}} {{user.last_name}}</span> <br>
+        <p><strong>Condition:</strong> {{user.condition}}</p>
+        <a class="secondary-content"
+        tooltipped data-delay="50"
+        data-position="left"
+        data-tooltip="Send a message">
+        <i class="material-icons" ng-click="clicked(user.id)">send</i></a>
+      </li>
+    </ul>
+    <a class="waves-effect waves-light btn right orange lighten-2" ng-click="users = false">Back</a>
   </div>
 </div>
