--- a/public/views/home.html
+++ b/public/views/home.html
@@ -3,7 +3,8 @@
   <div class="hero my-parallax center-center">
     <video src="videos/vid4.mp4" class="bg-video" autoplay poster="#"></video>
     <div class="hero-title">
-      Trade textbooks with your classmates.
+      <h1>vu<strong><b>books</b><strong></h1>
+        <h4>A better way to trade textbooks</h4>
 
     </div>
   </div>
@@ -47,15 +48,14 @@
   <div class="search header my-parallax center-center">
     <div class="center-center">
       <div class="banner-title">
-        <h1>Search for Books</h1>
+        <h2>Start Searching for Books</h2>
       </div>
       <div class="search-banner ">
-        <div class="input-field" style="display:flex">
-          <input type="text" id='search' ng-model="bsearch" required>
-          <label for="search">Search by title, author, class subject, or ISBN</label>
-          <a ui-sref="search" ng-click='search(bsearch)'><i class='material-icons white-text small'>search</i></a>
-        </div>
-        <button  ui-sref="search" ng-click='getAllBooks()'>all books</button>
+        <form class="input-field" ng-submit='searchFromHome(homeSearch)' style="  margin-top: 2rem;">
+          <i class="material-icons prefix">search</i>
+          <input type="text" id='search' ng-model="homeSearch" required>
+          <label class="home-search" for="search">Search by title, author, or ISBN </label>
+        </form>
 
       </div>
 
@@ -64,5 +64,20 @@
 
   </div>
 
-
+  <footer class="page-footer grey darken-4">
+           <div class="container">
+             <div class="row">
+               <div class="col l6 s12">
+                 <h5 class="white-text">Contact</h5>
+                 <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+               </div>
+             </div>
+           </div>
+           <div class="footer-copyright">
+             <div class="container">
+             © 2014 Copyright Text
+             <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+             </div>
+           </div>
+         </footer>
 </div>
