--- a/public/views/messages.html
+++ b/public/views/messages.html
@@ -19,7 +19,7 @@
 
 
               <form input-field style="border-box" ng-submit="postMessage(convo)">
-                <input id="search" type="text" ng-model="convo.msg" length="150" style="text-align:right">
+                <input id="search" type="text" ng-model="convo.msg" autocomplete='off' style="text-align:right">
                 <label style='right:0;'>Send Message</label>
               </form>
           </div>
