--- a/public/views/search.html
+++ b/public/views/search.html
@@ -11,7 +11,7 @@
       </ul>
       <div class="divider"></div>
     </div> -->
-    <div class='col s8 offset-s2'>
+    <div class='col m10 l8 offset-m1 offset-l2'>
       <div class="row search-sort">
         <div class="col s10">
           <form class="input-field" ng-submit='search(bsearch)'>
