--- a/public/views/home.html
+++ b/public/views/home.html
@@ -54,7 +54,7 @@
         <form class="input-field" ng-submit='searchFromHome(homeSearch)' style="  margin-top: 2rem;">
           <i class="material-icons prefix">search</i>
           <input type="text" id='search' ng-model="homeSearch" required>
-          <label class="home-search" for="search">Search by title, author, or ISBN </label>
+          <label class="home-search mobile" for="search">Search by title, author, or ISBN </label>
         </form>
 
       </div>
