--- a/public/views/modal.html
+++ b/public/views/modal.html
@@ -6,12 +6,12 @@
         </a>
       </div>
       <div class="row">
-        <div class="col s4">
+        <div class="col s4 mobile">
           <img class="book-details-img" ng-src='{{book.imgurl}}'></img>
         </div>
 
 
-        <div class="col s8">
+        <div class="col s12 m8">
           <div class="book-details">
             <ul class="collection with-header" data-collapsible="accordion" watch>
                 <li class="collection-header">
