--- a/public/views/search.html
+++ b/public/views/search.html
@@ -1,7 +1,7 @@
 <div class="page-wrapper container">
   <!-- <div class="bg"></div> -->
   <div class="row">
-    <div class='col m10 l8 offset-m1 offset-l2'>
+    <div class='col m10 offset-m1'>
       <div class="row search-sort">
         <div class="col s10">
           <form class="input-field" ng-submit='search(bsearch)'>
