--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -35,7 +35,7 @@ main.ng-enter.ng-enter-active {
 }
 
 .page-wrapper {
-  padding-top: 65px;
+  padding-top: 60px;
 
 }
 
@@ -79,8 +79,8 @@ main.ng-enter.ng-enter-active {
 }
 
 .search-sort {
-  width: 62%;
-  left: 20%;
+  width: 79%;
+  left: 11%;
   position: fixed;
   z-index: 50;
   background-color: white;
@@ -147,10 +147,7 @@ width: 100%;
 }
 
 .my-parallax {
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  margin-top: -12px;
 }
 
 .divider-section {
