--- a/public/views/home.html
+++ b/public/views/home.html
@@ -15,27 +15,32 @@
     <div class="col s12 m4">
       <div class="icon-block">
         <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-        <h5 class="center">Speeds up development</h5>
+        <h5 class="center">No Books Left Behind</h5>
 
-        <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+        <p class="light">
+          A typical college student can spend upwards of $200 on a single textbook, but at the end of the semester, the campus bookstore will buy the book back at a fraction of the price. Vu<b>books</b> is a way to maximize the value of every textbook.
       </div>
     </div>
 
     <div class="col s12 m4">
       <div class="icon-block">
         <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-        <h5 class="center">User Experience Focused</h5>
+        <h5 class="center">Easily Find People to Trade With</h5>
 
-        <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+        <p class="light">
+          Other students at your college will need that book and you are going to need books for another class. Who better to do business with than with the hundreds with students around you everyday.
+        </p>
       </div>
     </div>
 
     <div class="col s12 m4">
       <div class="icon-block">
         <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-        <h5 class="center">Easy to work with</h5>
+        <h5 class="center">Negotiate Your Terms</h5>
 
-        <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+        <p class="light">
+          Unfortunately, not all books were create equal. So it wouldn't make sense to trade them as such. Easily manage conversations with all your potential traders. Whether it be book for book, or book for money. Find what you need and set your price.
+        </p>
       </div>
     </div>
   </div>
@@ -69,14 +74,14 @@
              <div class="row">
                <div class="col l6 s12">
                  <h5 class="white-text">Contact</h5>
-                 <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                 <p class="grey-text text-lighten-4">harryvu801@gmail.com</p>
                </div>
              </div>
            </div>
            <div class="footer-copyright">
              <div class="container">
-             © 2014 Copyright Text
-             <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+
+             <a class="grey-text text-lighten-4 right" >© 2014 Copyright Text</a>
              </div>
            </div>
          </footer>
