--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -2,7 +2,7 @@
   <div class="nav-wrapper grey darken-4">
     <ul id="nav-mobile" class="left">
       <li><a href="#" style="display:flex"><h4>vu<strong><b>books</b></strong></h4></a></li>
-      <li class="mobile"><a ui-sref='search' ng-click='reset()'> Books</a></li>
+      <!-- <li class="mobile"><a ui-sref='search' ng-click='reset()'> Books</a></li> -->
     </ul>
 
 
