added footer info

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -73,8 +73,10 @@
            <div class="container">
              <div class="row">
                <div class="col l6 s12">
-                 <h5 class="white-text">Contact</h5>
-                 <p class="grey-text text-lighten-4">harryvu801@gmail.com</p>
+                 <h5 class="white-text"><u><b>PLEASE READ</b></u></h5>
+                 <p class="grey-text text-lighten-4">This is a prototype website meant to serve as a portfoltio piece. Currently the functionality is limited.
+                 For a demo of the site, sign in using the following credentials: <br> UN - demo2@demo.com; <br> PW - 1234 <br>
+                Available search terms: "Calculus", "History", "English", "Chemistry" </p>
                </div>
              </div>
            </div>
